Fixed man page typo.  Updated copyright to match source.

--- a/misc/wgsim.1
+++ b/misc/wgsim.1
@@ -43,13 +43,15 @@ probability an indel is extended [0.30]
 seed for random generator [\-1]
 .TP
 \fB\-A\fR FLOAT
-disgard if the fraction of ambiguous bases higher than FLOAT [0.05]
+discard if the fraction of ambiguous bases higher than FLOAT [0.05]
 .TP
 \fB\-h\fR
 haplotype mode
 .TP
 Parameter defaults are given in square brackets.
 .SH AUTHOR
-Copyright Genome Research Limited, Heng Li 2008-2011
+Copyright 2008 Genome Research Limited.
+.br
+Copyright 2011 Heng Li.
 .TP
 wgsim is part of samtools, https://github.com/samtools/samtools
